--- a/lab_work/script/menu.css
+++ b/lab_work/script/menu.css
@@ -15,13 +15,9 @@ body {
 
 }
 
-
-
 h1 {
     text-shadow:
-        #424242 1px 0px 0px,
-        rgba(130, 150, 252, 0.3) -45px -20px 1px,
-        rgba(130, 150, 252, 0.2) -60px -30px 1px;
+        #424242 1px 0px 0px;
     margin-bottom: 3.5%;
 }
 
