--- a/lab_work/script/menu.css
+++ b/lab_work/script/menu.css
@@ -46,7 +46,6 @@ h2 {
     width: 200px;
     height: 150px;
     border-radius: 10px;
-
 }
 
 .card h3 {
@@ -70,17 +69,14 @@ h2 {
 
 /* FOOTER */
 footer {
-    /* Used for making the footer */
-    border-top: 2.5px inset #F5F5F5;
-    border-top-style: dotted;
-}
-
-footer {
+    border-top: 2.5px dotted #F5F5F5;
     font-size: 0.8em;
     font-family: 'Atkinson Hyperlegible', sans-serif;
     display: flex;
     justify-content: space-between;
     width: 100%;
+    padding: 10px 0;
+    /* Added padding to give space around content */
 }
 
 footer a {
