--- a/lab_work/script/menu.css
+++ b/lab_work/script/menu.css
@@ -1,73 +1,22 @@
-html {
-    height: 100%;
-}
-
+html,
 body {
     height: 100%;
-    padding: 5%;
     margin: 0;
+    padding: 0;
     background: #1E2A5E;
     color: aliceblue;
     font-family: 'Atkinson Hyperlegible', sans-serif;
     line-height: 1.5;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
+    flex: 1;
     text-align: center;
+    padding: 5%;
 }
 
-h1 {
-    font-size: 2.5em;
-    margin-bottom: 10px;
-}
-
-h2 {
-    font-size: 1.5em;
-    margin-bottom: 30px;
-    color: #F5F5F5;
-}
-
-.gallery {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.card {
-    background-color: #2C3A70;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    padding: 15px;
-    width: 200px;
-    text-align: center;
-}
-
-.card img {
-    width: 200px;
-    height: 150px;
-    border-radius: 10px;
-}
-
-.card h3 {
-    margin-bottom: 15px;
-    color: #F5F5F5;
-}
-
-.card button {
-    background-color: #007BFF;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-family: 'Atkinson Hyperlegible', sans-serif;
-}
-
-.card button:hover {
-    background-color: #0056b3;
-}
-
-/* FOOTER */
 footer {
     border-top: 2.5px dotted #F5F5F5;
     font-size: 0.8em;
@@ -76,10 +25,7 @@ footer {
     justify-content: space-between;
     width: 100%;
     padding: 10px 0;
-    /* Added padding to give space around content */
-}
-
-footer a {
-    text-decoration: none;
-    color: #F5F5F5;
+    /* Keeps footer at the bottom */
+    position: relative;
+    bottom: 0;
 }
