--- a/lab_work/script/menu.css
+++ b/lab_work/script/menu.css
@@ -2,7 +2,7 @@ html,
 body {
     height: 100%;
     margin: 0;
-    padding: 0;
+    padding: 5%;
     background: #1E2A5E;
     color: aliceblue;
     font-family: 'Atkinson Hyperlegible', sans-serif;
