--- a/docs/lab_work/Lab1.1/lab1.1.css
+++ b/docs/lab_work/Lab1.1/lab1.1.css
@@ -5,6 +5,7 @@ html {
 body {
     height: 100%;
     padding: 5%;
+    padding-top: 0;
     margin: 0;
     background: #1E2A5E;
     color: aliceblue;
